--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/dominion79/Saw-Front-End-App/issues"
   },
-  "homepage": "https://github.com/dominion79/Saw-Front-End-App#readme"
+  "homepage": "https://github.com/dominion79/Saw-Front-End-App#readme",
+  "dependencies": {
+    "contentful": "^7.8.0",
+    "next": "^8.1.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  }
 }
