--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
