--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
   },
   "homepage": "https://github.com/dominion79/Saw-Front-End-App#readme",
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "contentful": "^7.8.0",
     "next": "^8.1.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-jest": "^24.8.0",
-    "babel-preset-env": "^1.7.0",
     "jest": "^24.8.0"
   }
 }
