--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "contentful": "^7.8.0",
     "next": "^8.1.0",
     "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
