--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/dominion79/Saw-Front-End-App#readme",
   "dependencies": {
+    "@sentry/browser": "^5.5.0",
     "@zeit/next-sass": "^1.0.1",
     "contentful": "^7.8.0",
     "next": "^8.1.0",
@@ -32,7 +33,12 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "cypress": "^3.4.0",
-    "jest": "^24.8.0"
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.4.0",
+    "bili": "^3.1.2",
+    "jest": "^23.4.1",
+    "regenerator-runtime": "^0.12.0"
   }
 }
