--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The front end app for stevenalanwilson.com",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/jest/bin/jest.js",
+    "test": "jest",
+    "test:upSnap": "jest --updateSnapshot",
     "now-build": "next build"
   },
   "repository": {
@@ -28,6 +29,7 @@
     "@zeit/next-sass": "^1.0.1",
     "contentful": "^7.8.0",
     "next": "^8.1.0",
+    "nock": "^11.3.3",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.6",
@@ -40,6 +42,12 @@
     "babel-jest": "^23.4.0",
     "bili": "^3.1.2",
     "jest": "^23.4.1",
+    "react-test-renderer": "^16.8.6",
     "regenerator-runtime": "^0.12.0"
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ]
   }
 }
