--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-jest": "^23.4.0",
     "bili": "^3.1.2",
     "jest": "^23.4.1",
+    "jest-sonar-reporter": "^2.0.0",
     "react-test-renderer": "^16.8.6",
     "regenerator-runtime": "^0.12.0"
   },
@@ -49,5 +50,14 @@
     "env": [
       "jest"
     ]
+  },
+  "jestSonar": {
+    "sonar56x": true,
+    "reportPath": "testResults",
+    "reportFile": "sonar-report.xml",
+    "indent": 4
+  },
+  "jest": {
+    "testResultsProcessor": "jest-sonar-reporter"
   }
 }
