--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "homepage": "https://github.com/dominion79/Saw-Front-End-App#readme",
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^13.4.0",
+    "@contentful/rich-text-react-renderer": "^13.4.0",
     "@sentry/browser": "^5.5.0",
     "@zeit/next-sass": "^1.0.1",
     "contentful": "^7.8.0",
@@ -41,13 +43,16 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.54",
     "@babel/preset-env": "^7.0.0-beta.54",
+    "autoprefixer": "^9.7.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.4.0",
     "bili": "^3.1.2",
     "jest": "^23.4.1",
     "jest-sonar-reporter": "^2.0.0",
+    "postcss-loader": "^3.0.0",
     "react-test-renderer": "^16.8.6",
-    "regenerator-runtime": "^0.12.0"
+    "regenerator-runtime": "^0.12.0",
+    "tailwindcss": "^1.1.3"
   },
   "standard": {
     "env": [
