--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "The front end app for stevenalanwilson.com",
   "main": "index.js",
-  "engines" : { 
-    "node" : ">=10.x"
+  "engines": {
+    "node": ">=10.x"
   },
-  "engineStrict" : true,
+  "engineStrict": true,
   "scripts": {
     "test": "jest",
     "test:upSnap": "jest --updateSnapshot",
@@ -33,33 +33,33 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^13.4.0",
     "@contentful/rich-text-react-renderer": "^13.4.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
-    "@sentry/browser": "^5.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "@sentry/browser": "^5.10.2",
     "@zeit/next-sass": "^1.0.1",
-    "contentful": "^7.8.0",
+    "contentful": "^7.12.0",
     "dotenv": "^8.2.0",
-    "next": "^9.1.2",
-    "nock": "^11.3.3",
-    "node-sass": "^4.12.0",
+    "next": "^9.1.7",
+    "nock": "^11.7.1",
+    "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "autoprefixer": "^9.7.1",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "autoprefixer": "^9.7.3",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.4.0",
-    "bili": "^3.1.2",
-    "jest": "^23.4.1",
+    "babel-jest": "^25.0.0",
+    "bili": "^4.8.1",
+    "jest": "^25.0.0",
     "jest-sonar-reporter": "^2.0.0",
     "postcss-loader": "^3.0.0",
-    "react-test-renderer": "^16.8.6",
+    "react-test-renderer": "^16.12.0",
     "regenerator-runtime": "^0.12.0",
-    "tailwindcss": "^1.1.3"
+    "tailwindcss": "^1.1.4"
   },
   "standard": {
     "env": [
