--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/dominion79/Saw-Front-End-App#readme",
   "dependencies": {
+    "@contentful/rich-text-from-markdown": "^14.1.1",
     "@contentful/rich-text-html-renderer": "^13.4.0",
     "@contentful/rich-text-react-renderer": "^13.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
@@ -42,10 +43,10 @@
     "dotenv": "^8.2.0",
     "next": "^9.5.3",
     "nock": "^11.3.3",
-    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "sass": "^1.26.11"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
