--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "test": "jest",
     "test:upSnap": "jest --updateSnapshot",
-    "build": "node_modules/next/dist/bin/next build",
-    "dev": "node_modules/next/dist/bin/next",
-    "start": "node_modules/next/dist/bin/next start"
+    "build": "next build",
+    "dev": "next",
+    "start": "next start"
   },
   "repository": {
     "type": "git",
