Removed unused sass dep

--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "nock": "^11.3.3",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "sass": "^1.26.11"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -70,5 +69,8 @@
   },
   "jest": {
     "testResultsProcessor": "jest-sonar-reporter"
+  },
+  "transform": {
+    "\\.js$": "<rootDir>/node_modules/babel-jest"
   }
 }
