--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "sass": "^1.27.0"
+    "sass": "^1.27.0",
+    "tailwindcss": "^1.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
@@ -54,8 +55,7 @@
     "jest-sonar-reporter": "^2.0.0",
     "postcss-loader": "^3.0.0",
     "react-test-renderer": "^16.12.0",
-    "regenerator-runtime": "^0.12.0",
-    "tailwindcss": "^1.1.4"
+    "regenerator-runtime": "^0.12.0"
   },
   "standard": {
     "env": [
