--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@fortawesome/react-fontawesome": "^0.1.17",
     "@sentry/browser": "^5.30.0",
     "@zeit/next-sass": "^1.0.1",
-    "contentful": "^7.15.2",
+    "contentful": "^9.2.14",
     "dotenv": "^8.6.0",
     "next": "^12.1.0",
     "nock": "^11.9.1",
@@ -43,7 +43,7 @@
     "react-dom": "^17.0.2",
     "request": "^2.88.2",
     "sass": "^1.49.8",
-    "tailwindcss": "^1.9.6"
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -52,17 +52,18 @@
     "@typescript-eslint/parser": "^5.12.0",
     "autoprefixer": "^9.8.8",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^26.6.3",
+    "babel-jest": "^29.3.1",
     "bili": "^5.0.5",
+    "chromatic": "^6.5.1",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^26.6.3",
+    "jest": "^29.3.1",
     "jest-sonar-reporter": "^2.0.0",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^7.0.2",
     "react-test-renderer": "^16.14.0",
     "regenerator-runtime": "^0.12.0"
   },
