--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "@sentry/browser": "^5.30.0",
     "contentful": "^7.15.2",
     "dotenv": "^8.6.0",
-    "next": "^12.3.4",
+    "eslint-config-next": "^14.2.5",
+    "next": "^14.2.5",
     "nock": "^11.9.1",
     "normalize.css": "^8.0.1",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "request": "^2.88.2",
     "sass": "^1.49.8",
     "tailwindcss": "^1.9.6"
