Remove ENVs from config

--- a/now.json
+++ b/now.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
   "env": {
-    "SPACEID": "@spaceid",
-    "ACCESSTOKEN": "@accesstoken",
-    "SENTRYDSN": "@sentrydsn"
+    // "SPACEID": "@spaceid",
+    // "ACCESSTOKEN": "@accesstoken",
+    // "SENTRYDSN": "@sentrydsn"
   }, 
   "build": {
     "env": {
-      "SPACEID": "@spaceid",
-      "ACCESSTOKEN": "@accesstoken",
-      "SENTRYDSN": "@sentrydsn"
+      // "SPACEID": "@spaceid",
+      // "ACCESSTOKEN": "@accesstoken",
+      // "SENTRYDSN": "@sentrydsn"
     }
   }
 }
