--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   "devDependencies": {
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
     "autoprefixer": "^10.4.19",
@@ -58,6 +60,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-sonar-reporter": "^2.0.0",
     "postcss-loader": "^8.1.1",
     "react-test-renderer": "^18.3.1",
@@ -73,9 +76,6 @@
     "reportPath": "testResults",
     "reportFile": "sonar-report.xml",
     "indent": 4
-  },
-  "jest": {
-    "testResultsProcessor": "jest-sonar-reporter"
   },
   "transform": {
     "\\.js$": "<rootDir>/node_modules/babel-jest"
