--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.5",
     "@sentry/browser": "^8.19.0",
+    "@types/mdx": "^2.0.13",
     "dotenv": "^16.4.5",
     "eslint-config-next": "^14.2.5",
     "next": "^14.2.5",
