--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "request": "^2.88.2",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.6",
-    "unified": "^11.0.5"
+    "unified": "^11.0.5",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
