--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@sentry/browser": "^8.19.0",
+    "@vercel/analytics": "^1.3.2",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "eslint-config-next": "^14.2.5",
