SEO & Best Practices (Medium Priority) Add sitemap.xml generation - Helps search engines discover all your pages Add robots.txt - Control search engine crawling Add Open Graph and Twitter Card meta tags - Better social media sharing Implement proper 404 page - Currently using default Next.js 404 Use the footerQuotes.js config - Currently hardcoded quote in Footer

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "scripts": {
     "test": "jest",
     "test:upSnap": "jest --updateSnapshot",
-    "build": "next build",
+    "build": "npm run sitemap && next build",
     "dev": "next",
-    "start": "next start"
+    "start": "next start",
+    "sitemap": "node scripts/generate-sitemap.js"
   },
   "repository": {
     "type": "git",
