--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "rehype-class-names": "^2.0.0",
     "rehype-document": "^7.0.3",
     "rehype-format": "^5.0.0",
+    "rehype-react": "^8.0.0",
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
