--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "scripts": {
     "test": "jest",
     "test:upSnap": "jest --updateSnapshot",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "build": "npm run sitemap && next build",
     "dev": "next",
     "start": "next start",
@@ -35,7 +37,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@sentry/browser": "^8.33.0",
+    "@sentry/nextjs": "^10.32.1",
     "@vercel/analytics": "^1.3.2",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
