added to your pre-commit hooks. Here's what was set up:
What Was Configured:
1. Prettier Installation

Installed Prettier as a dev dependency
2. .prettierrc Configuration

Semi-colons: disabled (matches your codebase style)
Single quotes: enabled
JSX single quotes: enabled
Tab width: 2 spaces
Print width: 100 characters
Trailing commas: ES5 compatible
Arrow function parens: always included
3. .prettierignore File

Excludes build artifacts, node_modules, public assets, and generated files
4. Pre-commit Hook Integration

Updated lint-staged to run in this order:
Prettier - Formats code
ESLint - Fixes linting issues
Jest - Runs related tests

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "lint-staged": "^16.2.7",
     "nock": "^13.5.4",
     "postcss-loader": "^8.1.1",
+    "prettier": "^3.7.4",
     "react-test-renderer": "^19.2.3",
     "regenerator-runtime": "^0.14.1"
   },
@@ -96,6 +97,7 @@
   },
   "lint-staged": {
     "*.{js,jsx}": [
+      "prettier --write",
       "eslint --fix",
       "jest --bail --findRelatedTests --passWithNoTests"
     ]
