--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint": "eslint . --ext .js,.jsx",
     "lint:fix": "eslint . --ext .js,.jsx --fix",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,json,md}\""
+    "format:check": "prettier --check \"**/*.{js,jsx,json,md}\"",
+    "analyze": "ANALYZE=true npm run build"
   },
   "repository": {
     "type": "git",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
+    "@next/bundle-analyzer": "^16.1.1",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.3.1",
     "autoprefixer": "^10.4.19",
