--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,4 @@
-{"projectId":"QmWT7zpFjDcZRbT31qdG8GUkx2Rn2WbLuYvX3LLyY89L37","orgId":"h4rROWA8RKo2jbvRs6iF0bv6"}
+{
+  "projectId": "QmWT7zpFjDcZRbT31qdG8GUkx2Rn2WbLuYvX3LLyY89L37",
+  "orgId": "h4rROWA8RKo2jbvRs6iF0bv6"
+}
