--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,26 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:jsx-a11y/recommended"],
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true,
+    "jest": true
+  },
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
   "rules": {
-    // React best practices
-    "react/prop-types": "warn",
-    "react/no-unused-prop-types": "warn",
-    "react/self-closing-comp": "warn",
-    "react/jsx-no-target-blank": "error",
-
-    // Accessibility
-    "jsx-a11y/alt-text": "error",
-    "jsx-a11y/anchor-is-valid": "warn",
-    "jsx-a11y/click-events-have-key-events": "warn",
-    "jsx-a11y/no-static-element-interactions": "warn",
-
-    // Code quality
     "no-console": ["warn", { "allow": ["warn", "error"] }],
     "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
     "prefer-const": "warn",
-    "no-var": "error",
-
-    // Next.js specific
-    "@next/next/no-img-element": "error"
+    "no-var": "error"
   }
 }
