--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "start": "next start",
     "sitemap": "node scripts/generate-sitemap.js",
     "prepare": "husky",
-    "lint": "eslint . --ext .js,.jsx",
-    "lint:fix": "eslint . --ext .js,.jsx --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,json,md}\"",
     "analyze": "ANALYZE=true npm run build"
@@ -46,10 +46,10 @@
     "@sentry/nextjs": "^10.32.1",
     "@vercel/analytics": "^1.3.2",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.5",
-    "eslint-config-next": "^15.5.9",
+    "dotenv": "^17.2.3",
+    "eslint-config-next": "^16.1.1",
     "gray-matter": "^4.0.3",
-    "next": "^15.5.9",
+    "next": "^16.1.1",
     "normalize.css": "^8.0.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -68,23 +68,31 @@
   "devDependencies": {
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.8",
+    "@eslint/compat": "^2.0.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
     "@next/bundle-analyzer": "^16.1.1",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.3.1",
     "autoprefixer": "^10.4.19",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.57.0",
+    "babel-jest": "^30.2.0",
+    "eslint": "^8.57.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^16.5.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^16.2.7",
-    "nock": "^13.5.4",
+    "nock": "^14.0.10",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.7.4",
     "react-test-renderer": "^19.2.3",
-    "regenerator-runtime": "^0.14.1"
+    "regenerator-runtime": "^0.14.1",
+    "typescript": "^5.9.3"
   },
   "standard": {
     "env": [
