feat(typescript): complete foundation setup and migrate config files
Phase 1 - Foundation Setup:
- Add tsconfig.json with incremental migration settings (allowJs, strict: false)
- Install TypeScript type dependencies (@types/react, @types/react-dom, @types/node, @types/jest)
- Configure ESLint for TypeScript (@typescript-eslint/parser, @typescript-eslint/eslint-plugin)
- Configure Jest for TypeScript support (ts-jest, moduleFileExtensions)
- Add type-check script to package.json
- Update lint-staged to include .ts/.tsx files

Phase 2 - Config and Service Migration:
- Migrate config/siteConfig.js → siteConfig.ts with SiteConfig interface
- Migrate config/icons.js → icons.ts (FontAwesome re-exports)
- Migrate config/articleThemes.js → articleThemes.ts with theme types
- Migrate services/getMarkdownService.js → getMarkdownService.ts
- Create types directory with comprehensive type definitions:
  - types/site.ts - Site configuration types
  - types/themes.ts - Article theme types
  - types/posts.ts - Markdown post types

Fixes:
- Fix Safari localhost TLS error by conditionalising upgrade-insecure-requests CSP directive to production only

All 264 tests passing, type-check passes.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,12 @@
 {
+  "extends": ["next/core-web-vitals"],
   "env": {
     "browser": true,
     "es2021": true,
     "node": true,
     "jest": true
   },
-  "plugins": ["jsx-a11y", "react"],
+  "plugins": ["jsx-a11y", "react", "@typescript-eslint"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
@@ -47,6 +48,32 @@
       "files": ["tests/**/*.js", "**/*.test.js"],
       "rules": {
         "react/function-component-definition": "off"
+      }
+    },
+    {
+      "files": ["*.ts", "*.tsx"],
+      "extends": ["plugin:@typescript-eslint/recommended"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": "./tsconfig.json"
+      },
+      "rules": {
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+          "warn",
+          {
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "ignoreRestSiblings": true
+          }
+        ]
+      }
+    },
+    {
+      "files": ["tests/**/*.ts", "tests/**/*.tsx", "**/*.test.ts", "**/*.test.tsx"],
+      "rules": {
+        "react/function-component-definition": "off",
+        "@typescript-eslint/no-unused-vars": "off"
       }
     }
   ]
