Summary of Changes Files Modified:
tsconfig.json - Enabled strictNullChecks
next.config.js - Environment-aware CSP
README.md - Coverage metrics and updated stats
components/content/ListPosts.tsx - Allow null in props
components/features/ExpertiseGrid.tsx - Allow null in props
4 test files - Added null-safe operators
Files Deleted:

jsconfig.json - Legacy configuration removed
Quality Metrics:

✅ All 264 tests passing
✅ 96.52% code coverage
✅ 0 ESLint errors
✅ TypeScript compilation successful with strict null checks
✅ Code formatted with Prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,8 @@
     "target": "es2017",
     // Strict mode - enabled after TypeScript migration
     "strict": true,
-    // Allow null and undefined to be assigned to any type (reduces test boilerplate)
-    "strictNullChecks": false,
+    // Enable strict null checks for better type safety
+    "strictNullChecks": true,
     // Import non-ES modules as default imports
     "esModuleInterop": true,
     // Skip type checking of declaration files for faster compilation
