feat: add TypeScript project references and improve documentation
- Set up TypeScript project references for incremental builds
- Add composite mode to packages/ui for declaration generation
- Configure apps to reference shared UI package
- Update .gitignore to exclude generated TypeScript artifacts
- Add comprehensive architecture diagrams to README
- Document build system and dependency injection flow
- Add visual representation of monorepo structure

Benefits:
- Faster incremental builds (only rebuild changed packages)
- Better IDE performance and type-checking
- Clearer documentation of system architecture
- Improved developer onboarding

--- a/.gitignore
+++ b/.gitignore
@@ -62,9 +62,14 @@ typings/
 .next
 .turbo
 
-# TypeScript build cache
+# TypeScript build cache and generated files
 tsconfig.tsbuildinfo
 *.tsbuildinfo
+packages/ui/**/*.d.ts
+packages/ui/**/*.d.ts.map
+packages/ui/**/*.js
+!packages/ui/**/*.config.js
+!packages/ui/**/*.test.js
 
 # sonarcube
 
