--- a/apps/limited/tsconfig.json
+++ b/apps/limited/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../packages/config/tsconfig.base.json",
   "compilerOptions": {
     // Allow JavaScript files in config (postcss, tailwind, jest, next, sentry configs)
     "allowJs": true,
@@ -57,6 +58,11 @@
       }
     ]
   },
+  "references": [
+    {
+      "path": "../../packages/ui"
+    }
+  ],
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules", ".next", "out", "coverage", "dist", "build"]
 }
