CI/CD Optimizations: - Add TypeScript build caching to ci.yml workflow (build & bundle-analysis jobs) - Update node.js.yml workflow with TS caching and Node 24.x - Cache key based on source files hash for optimal invalidation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,17 @@ jobs:
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
 
+      - name: Cache TypeScript build info
+        uses: actions/cache@v4
+        with:
+          path: |
+            packages/ui/**/*.tsbuildinfo
+            packages/ui/**/*.d.ts
+            packages/ui/**/*.d.ts.map
+          key: ${{ runner.os }}-tsc-${{ hashFiles('packages/ui/**/*.ts', 'packages/ui/**/*.tsx', 'packages/ui/tsconfig.json') }}
+          restore-keys: |
+            ${{ runner.os }}-tsc-
+
       - name: Build production bundle
         run: npm run build
         env:
@@ -109,6 +120,17 @@ jobs:
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
+
+      - name: Cache TypeScript build info
+        uses: actions/cache@v4
+        with:
+          path: |
+            packages/ui/**/*.tsbuildinfo
+            packages/ui/**/*.d.ts
+            packages/ui/**/*.d.ts.map
+          key: ${{ runner.os }}-tsc-${{ hashFiles('packages/ui/**/*.ts', 'packages/ui/**/*.tsx', 'packages/ui/tsconfig.json') }}
+          restore-keys: |
+            ${{ runner.os }}-tsc-
 
       - name: Analyze bundle (PR)
         run: ANALYZE=true npm run build
